<resources>
    <string name="app_name">CDI</string>
    <string name="action_settings">Settings</string>
    <string name="SplashMainHead">Community Development Index- Pune</string>
    <string name="SplashScreenDetails">Global Shapers Community, Pune Hubs "Community Development Index" (CDI) can be used to determine current status of the city and to decide on projects by the government and civic bodies to make it a better place and reevaluate the progress.</string>
	<string name="SplashScreenDetails1"><br><p>CDI is based on 9 domains with equal importance and cover citys growth as well as the well-being of its people.</p></br></string>
	<string name="SplashScreenDetails2"><p><br><br>NOTE: Please give scores on the scale of 0-10 against each indicator so that satisfaction in each indicator and therefore in each domain can be measured, and the areas where the community lacks sufficiency can be identified</br></br></p></string>
    <string name="SplashSubHead">9 Domains of Community Development Index</string>
    <string name="EmailId">Your Email ID *</string>
    <string name="AreaCode">Area Pincode *</string>
    <string name="info">Please enter your details and give a feedback for your citys development</string>
    <string name="Form1Main">1.Peace of Mind</string>
    <string name="Form1Sub">Material growth of a city does not necessarily imply the psychological wellbeing of its people. Feeling positive and secured in a city is very important for all the citizens along with the material growth</string>
    <string name="Form2Main">2. Health</string>
    <string name="Form2Sub">Citizens health and access to the healthcare services are very important factors to make any city a choice for living</string>
    <string name="Form3Main">3. Education</string>
    <string name="Form3Sub">Better education facilities and literacy rate is a deciding factor in citys economic growth.A city with educated and skilled workforce is always favored by enterprises. Education also spreads awareness about the social issues.</string>
    <string name="Form4Main">4. Economic Environment</string>
	<string name="Form4Sub">A city providing better economic environment like employment opportunities,good banking sector,markets etc makes lives of its citizens more comfortable and raise their standards of living.</string>
	<string name="Form5Main">5. Infrastructure and Cultural Environment</string>
	<string name="Form5Sub">Infrastructure development is directly proportional to citys economic development.A city which offers basic but most important services like water,electricity,roads,public transport is said to be developed.In the most favorable city,people participate in cultural activities and respect others to maintain communal harmony</string>
    <string name="Form6Main">6. Governance</string>
	<string name="Form6Sub">Citys performance on a development scale is broadly determined by the governments performance and its ability to provide basic services and fundamental rights to its citizens</string>
	<string name="Form7Main">7. Community Vitality and Safety</string>
	<string name="Form7Sub">Urban areas in a country like India have several communities living together and sharing resources of the city along with contributing to the growth.Safety of citizens is a top priority for any city along with maintaining equality for all citizens.</string>
	<string name="Form8Main">8. Environment</string>
	<string name="Form8Sub">Environment degradation is a concern across the world specially in urban areas. It is critical to preserve the environment by reducing all types of pollutions and cutting use of natural resources</string>
	<string name="Form9Main">9. Demography and Living standards</string>
	<string name="Form9Sub">Increasing population and intrastate or interstate migration to the city can create pressure on available resources like housing options, infrastructure etc. Household per capita income and better living standards to citizens contribute to the development of community</string>
    <string name="Label0">1.1    Life Satisfaction</string>
    <string name="Label1">Please give ratings to your city based on below sub-indicators</string>
	<string name="Label2">Satisfaction with health *</string>
	<string name="Label3">Rate your city on this parameter</string>
	<string name="Label4">Satisfaction with standard of living *</string>
	<string name="Label5">Satisfaction with occupation *</string>
	<string name="Label6">Satisfaction with family relationship *</string>
	<string name="Label7">Satisfaction with work life balance *</string>
	<string name="Label8">1.2  Spirituality</string>
	<string name="Label9">Rate your city on the basis of spirituality level</string>
	<string name="Label10">Spirituality level *</string>
	<string name="Label11">Prayer recitation *</string>
	<string name="Label12">Meditation *</string>
	<string name="Label13">1.3    Positive emotions</string>
	<string name="Label14">How positive do you feel in your city</string>
	<string name="Label15">Positive emotions (calmness compassion forgiveness contentment generosity) *</string>
	<string name="Label16">1.4    Negative emotions</string>
	<string name="Label17">How negative do you feel in your city</string>
	<string name="Label18">Negative emotions (selfishness,jealousy,fear,worry,anger) *</string>
	<string name="Label19">1.5    Time Use</string>
	<string name="Label20">How do you use your time</string>
	<string name="Label21">Working hours *</string>
	<string name="Label22">Sleeping hours *</string>
	<string name="Label23">Time spent to travel to workplace, non productive work etc *</string>
	<string name="Label24">Time spent on hobbies *</string>
	<string name="Label25">2.1    Healthy days</string>
	<string name="Label26">Number of healthy days in past year * </string>
	<string name="Label27">2.2    Disability</string>
	<string name="Label28">Long term disability *</string>
	<string name="Label29">any long term disabilities, health/mental problems?</string>
	<string name="Label30">Activity limitations *</string>
	<string name="Label31">Does the long-term disability restrict your activities?</string>
	<string name="Label32">2.3 Access to healthcare services</string>
	<string name="Label33">Easy access to heathcare services in city *</string>
	<string name="Label34">Rate your city on the easy and affordable access to Hospitals/Doctors/Ambulance/Counselling/Blood banks etc</string>
	<string name="Label35">2.4 Life expectancy</string>
	<string name="Label36">Life expectancy at birth *</string>
	<string name="Label37">2.5 Mortality/Fertility Rate</string>
	<string name="Label38">Under-five mortality *</string>
	<string name="Label39">2.6 Infectious Diseases and HIV</string>
	<string name="Label40">Prevention of diseases, Public awareness and treatment *</string>
	<string name="Label41">3.1 Literacy</string>
	<string name="Label42">Literacy level *</string>
	<string name="Label43">Female literacy level *</string>
	<string name="Label44">3.2 Schooling</string>
	<string name="Label45">Formal education level *</string>
	<string name="Label46">Number of schools *</string>
	<string name="Label47">Teacher-Student ration in Government schools *</string>
	<string name="Label48">3.3 Knowledge</string>
	<string name="Label49">Knowledge on Law and order *</string>
	<string name="Label50">Knowledge on Health and Fitness *</string>
	<string name="Label51">Knowledge on Local culture and traditions *</string>
	<string name="Label52">3.4 Values</string>
	<string name="Label53">Ratings should be given from citizens perspective. e.g. do you think Pune citizens believe that Lying is justifiable? Rate 0 if yes, and 10 if you dont think so</string>
	<string name="Label54">Killing *</string>
	<string name="Label55">Rate your city on this parameter from peoples point of view</string>
	<string name="Label56">Stealing *</string>
	<string name="Label57">Lying *</string>
	<string name="Label58">Creating disharmony *</string>
	<string name="Label59">Sexual misconduct *</string>
	<string name="Label60">4.1 Employment and Income</string>
	<string name="Label61">Per capita income *</string>
	<string name="Label62">People below poverty line *</string>
	<string name="Label63">4.2 Economic Infrastrucure</string>
	<string name="Label64">Frequency of banks *</string>
	<string name="Label65">Frequency of markets *</string>
	<string name="Label66">4.3 Business Environment</string>
	<string name="Label67">Environment and infrastructure for businesses *</string>
	<string name="Label68">Number of startups from the city *</string>
	<string name="Label69">4.4 Purchasing Power</string>
	<string name="Label70">To purchase consumer durables,vehicles,gadgets and services *</string>
	<string name="Label71">4.5 Innovation and Technology</string>
	<string name="Label72">Use of Innovation and technology by people, Government and businesses *</string>
	<string name="Label73">5.1 Water</string>
	<string name="Label74">Availability of water supply *</string>
	<string name="Label75">Quality of water *</string>
	<string name="Label76">Average cost of water supply *</string>
	<string name="Label77">5.2 Electricity</string>
	<string name="Label78">Availability of electricity *</string>
	<string name="Label79">5.3 Public amenities</string>
	<string name="Label80">Adequecy of Parks *</string>
	<string name="Label81">Adequecy of Playgrounds *</string>
	<string name="Label82">5.4 Roads</string>
	<string name="Label83">Quality of roads *</string>
	<string name="Label84">Presence of footpaths *</string>
	<string name="Label85">Conditions of footpaths *</string>
	<string name="Label86">Presence of Parking space *</string>
	<string name="Label87">Safety of pedestrians *</string>
	<string name="Label88">Presence of Streetlighting *</string>
	<string name="Label89">5.5 Public transport</string>
	<string name="Label90">Coverage of Public transport *</string>
	<string name="Label91">Frequency/Timings of buses *</string>
	<string name="Label92">Average cost per KM *</string>
	<string name="Label93">Crowding in Public transport *</string>
	<string name="Label94">5.6 Cultural participation and Diversity</string>
	<string name="Label95">Cultural diversity and respect *</string>
	<string name="Label96">Peace and harmony *</string>
	<string name="Label97">6.1 Government Performance</string>
	<string name="Label98">Rate your city on the performance of local civic body</string>
	<string name="Label99">Creating jobs *</string>
	<string name="Label101">Reducing gap between rich and poor *</string>
	<string name="Label102">Fighting corruption *</string>
	<string name="Label103">Preserving culture and traditions *</string>
	<string name="Label104">Protecting environment *</string>
	<string name="Label105">Providing educational needs *</string>
	<string name="Label106">Improving health services *</string>
	<string name="Label107">Preservation of cultural heritage *</string>
	<string name="Label108">6.2 Fundamental rights</string>
	<string name="Label109">RIght of Speech and Opinion *</string>
	<string name="Label110">RIght to Vote *</string>
	<string name="Label111">RIght to join politics and public services *</string>
	<string name="Label112">Free from discrimination *</string>
	<string name="Label113">6.3 Services and schemes</string>
	<string name="Label114">Waste disposal methods *</string>
	<string name="Label115">Condition of Government Hospitals *</string>
	<string name="Label116">Condition of Government Schools *</string>
	<string name="Label117">Schemes for poor and people in slums *</string>
	<string name="Label118">6.4 Crisis Management/Disaster Recovery</string>
	<string name="Label119">Govt. Performance in Crisis Management and Disaster Recovery *</string>
	<string name="Label120">7.1 Donations (time and money)</string>
	<string name="Label121">Time and money donated in year by people *</string>
	<string name="Label122">Rate your city on awareness for social responsibilities</string>
</resources>